/*
 * Copyright 2019 The FATE Authors. All Rights Reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package com.webank.ai.fate.core.mlmodel.buffer;
option java_outer_classname = "HeteroNNModelMetaProto";

message Optimizer {
    string optimizer = 1;
    string args = 2;
}

message PredictParam {
    double threshold = 1;
}

message HeteroNNModelMeta {
    string task_type = 1;
    string config_type = 2;
    repeated string bottom_nn_define = 3;
    string interactive_layer_define = 4;
    repeated string top_nn_define = 5;
    int32 batch_size = 6;
    int32 epochs = 7;
    string early_stop = 8;
    double tol = 9;
    repeated string metrics = 10;
    Optimizer optimizer = 11;
    string loss = 12;
}
