/*
 * Copyright 2019 The FATE Authors. All Rights Reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package com.webank.ai.fate.core.mlmodel.buffer;
option java_outer_classname = "NNModelParamProto";

message HeteroNNModelParam {
    int32 iter_epoch = 1;
    bytes bottom_saved_model_bytes = 2;
    bytes interactive_save_model_bytes = 3;
    bytes top_saved_model_bytes = 4;
    repeated double loss_history = 5;
    bool is_converged = 6;
    repeated string header = 7;
}

